rewrite to java 8 style